macdir-simple (4.0) UNRELEASED; urgency=medium

  * Add encrypt and descrypt routines to be used to store secrets.
  * Correct display errors in user details and user dump pages.
  * Correct error in adding group entry during user updates.

 -- Bill MacAllister <bill@ca-zephyr.org>  Mon, 23 Dec 2019 09:18:51 +0000

macdir-simple (3.8) unstable; urgency=medium

  * Update to newer version of PHP.
  * Replace depreciated use of ereg_replace.
  * Replace crypt with password_hash.

 -- Bill MacAllister <bill@ca-zephyr.org>  Mon, 27 Aug 2018 08:12:00 +0000

macdir-simple (3.7) UNRELEASED; urgency=medium

  * Set max-width for my links pages.
  * Display password as it is input.
  * Break display of passwords and urls on white space.

 -- Bill MacAllister <bill@ca-zephyr.org>  Sat, 10 Mar 2018 16:11:25 -0800

macdir-simple (3.6) unstable; urgency=medium

  * Update input of password on the links maintenance page.

 -- Bill MacAllister <bill@ca-zephyr.org>  Wed, 27 Dec 2017 10:32:26 -0800

macdir-simple (3.5) unstable; urgency=medium

  * Adjust the configuration defaults to be more generic.

 -- Bill MacAllister <bill@ca-zephyr.org>  Mon, 04 Jul 2016 20:12:02 -0700

macdir-simple (3.4) unstable; urgency=medium

  * Correct handling of login shell.
  * Provide default for home directory.

 -- Bill MacAllister <bill@ca-zephyr.org>  Sat, 14 May 2016 11:16:16 -0700

macdir-simple (3.3) unstable; urgency=medium

  * Add in group search scripts.
  * Remove pam_groups support.
  * Remove samba computer support.
  * Convert my_links.php to use a responsive design.

 -- Bill MacAllister <bill@ca-zephyr.org>  Wed, 20 Apr 2016 10:57:18 -0700

macdir-simple (3.2) unstable; urgency=medium

  * Retire all binds to the directory that use the ldap manager password.

 -- Bill MacAllister <bill@ca-zephyr.org>  Sun, 09 Aug 2015 13:51:10 -0700

macdir-simple (3.1) unstable; urgency=medium

  * Correct function call when changing the password.